Update to use switch statements, tear-offs, and diamond syntax